map / description are now aligned correctly

--- a/tfgame/Content/custom.scss
+++ b/tfgame/Content/custom.scss
@@ -16,6 +16,8 @@ $good: #51D269;
 $error: #EA4987;
 $suberror: white;
 
+$willpowerRed: #9E0E0E;
+
 $notificationBoxColor: #C2A9AF;
 
 $fontBig: 20px;
@@ -321,13 +323,6 @@ background: #6673D4;
 background: #C36C0A;
 }
 
-.glyphicon-off, .glyphicon-time{
-color: white;
-}
-
-.glyphicon-off:hover, .glyphicon-time:hover, glyphicon-trash:hover{
-color: black !important;
-}
 
 .formerly a {
     font-weight: bold;
@@ -367,7 +362,7 @@ color: black !important;
 }
 
 .playerAttackNotification {
-    color: #9E0E0E;
+    color: $willpowerRed;
 }
 
 .playerSearchingNotification{
